src/manifests/mariadb_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: authmariadb 
  namespace: egs8sneakerstore
spec:
  selector:
    app: mariadb-auth
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
