src/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: egs8sneakerstore
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: elmacias66/auth:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: egs8sneakerstore
spec:
  ports:
  - port: 5000 #tem que ser o do container
    targetPort: 5000 #port de acesso do exterior
  selector:
    app: auth

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: egs8sneakerstore
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/custom-response-headers: "Access-Control-Allow-Origin:*||Access-Control-Allow-Methods:GET,POST,OPTIONS||Access-Control-Allow-Headers:DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range||Access-Control-Expose-Headers:Content-Length,Content-Range"
spec:
  rules:
  - host: auth.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth
            port: 
              number: 5000
